--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "My Pipedrive App",
     "version": "1.0.0",
-    "url": "http://localhost:3000",
+    "url": "https://pipedrive-simple.vercel.app",
     "custom_ui_locations": ["deals_details_top_bar"],
     "permissions": ["deals:read", "deals:write"]
 }
