--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
       { "source": "/form.html", "destination": "/form.html" },
-      { "source": "/window.js", "destination": "/window.js" },
+      { "source": "/script.js", "destination": "/script.js" },
       { "source": "/manifest.json", "destination": "/manifest.json" }
     ]
   }
