--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "dependencies": {
-    "@pipedrive/app-extensions-sdk": "^0.11.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "babel-loader": "^9.2.1",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4"
-  }
+    
+    "scripts": {
+        "build": "webpack --mode production"
+    },
+    "dependencies": {
+        "@pipedrive/app-extensions-sdk": "^0.11.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "babel-loader": "^9.2.1",
+        "webpack": "^5.97.1",
+        "webpack-cli": "^5.1.4"
+    }
 }
