--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-    
+    "name": "pipedrive-simple",
+    "version": "1.0.0",
+    "description": "A simple Pipedrive app",
+    "main": "index.js",
     "scripts": {
-        "build": "webpack --mode production"
+      "build": "webpack --mode production",
+      "start": "webpack serve --mode development"
     },
     "dependencies": {
-        "@pipedrive/app-extensions-sdk": "^0.11.1"
+      "@pipedrive/app-extensions-sdk": "^1.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.26.0",
-        "@babel/preset-env": "^7.26.0",
-        "babel-loader": "^9.2.1",
-        "webpack": "^5.97.1",
-        "webpack-cli": "^5.1.4"
-    }
-}
+      "webpack": "^5.0.0",
+      "webpack-cli": "^4.0.0",
+      "babel-loader": "^8.0.0",
+      "@babel/core": "^7.0.0",
+      "@babel/preset-env": "^7.0.0"
+    },
+    "author": "Your Name",
+    "license": "MIT"
+  }
