--- a/pipedrive-app/manifest.json
+++ b/pipedrive-app/manifest.json
@@ -1,14 +1,14 @@
 {
     "name": "My Pipedrive App",
     "version": "1.0.0",
-    "url": "https://your-app-url.vercel.app",
+    "url": "https://pipedrive-simple.vercel.app/",
     "custom_ui_locations": ["deal_list_view"],
     "permissions": ["deals:read", "deals:write"],
-    "identifier": "your-app-identifier",
+    "identifier": "Custom Deal Creator",
     "custom_ui": {
       "deal_list_view": {
         "type": "button",
-        "url": "https://your-app-url.vercel.app/index.html"
+        "url": "https://pipedrive-simple.vercel.app/pipedrive"
       }
     }
   }
